notes to linear correlation

--- a/sw01/notes/notes_sw01.tex
+++ b/sw01/notes/notes_sw01.tex
@@ -7,23 +7,28 @@
 \author{Daniel Winz}
 
 \begin{document}
-    \maketitle
-    \clearpage
-    \section{Übergang Analog $\to$ Digital}
-    \[ x(t) = \sin(\omega\cdot t) \]
-    \[ x[n] = \sin(2 \pi \cdot f \cdot n \cdot T_s) \]
-    \begin{table}[h!]
-        \centering
-        \begin{zebratabular}{llll}
-            \rowcolor{gray}
-                            & analog            & Abtastung                 & digital \\
-            Zeit            & $t[s]$            & $\frac{1}{T_s}[sample/s]$ & $n[sample]$ \\
-            Periode         & $T[s/cycle]$      & $\frac{1}{T_s}[sample/s]$ & $\frac{T}{T_s}[sample/cycle]$ \\
-            Frequenz        & $f[cycle/s = Hz]$ & $\frac{1}{f_s}[s/sample]$ & $\frac{f}{f_s}[cycle/sample]$ \\
-            Kreisfrequenz   & $f[rad/s]$        & $\frac{1}{f_s}[s/sample]$ & $\frac{f}{f_s}[rad/sample = \Omega = 2 \pi \frac{f}{f_s}]$ \\
-        \end{zebratabular}
-        \caption{Übergang Analog $\to$ Digital}
-        \label{tab:a/d}
-    \end{table}
+\maketitle
+\clearpage
+
+\section{Übergang Analog $\to$ Digital}
+\[ x(t) = \sin(\omega\cdot t) \]
+\[ x[n] = \sin(2 \pi \cdot f \cdot n \cdot T_s) \]
+\begin{table}[h!]
+    \centering
+    \begin{zebratabular}{llll}
+        \rowcolor{gray}
+                        & analog            & Abtastung                 & digital \\
+        Zeit            & $t[s]$            & $\frac{1}{T_s}[sample/s]$ & $n[sample]$ \\
+        Periode         & $T[s/cycle]$      & $\frac{1}{T_s}[sample/s]$ & $\frac{T}{T_s}[sample/cycle]$ \\
+        Frequenz        & $f[cycle/s = Hz]$ & $\frac{1}{f_s}[s/sample]$ & $\frac{f}{f_s}[cycle/sample]$ \\
+        Kreisfrequenz   & $f[rad/s]$        & $\frac{1}{f_s}[s/sample]$ & $\frac{f}{f_s}[rad/sample = \Omega = 2 \pi \frac{f}{f_s}]$ \\
+    \end{zebratabular}
+    \caption{Übergang Analog $\to$ Digital}
+    \label{tab:a/d}
+\end{table}
+
+\section{Korrelation}
+Länge der linearen Korrelation: 
+\[ \boxed{-N_x + 1 \leq n \leq N_y - 1} \]
 \end{document}
 
