--- a/sw02/notes/notes_sw02.tex
+++ b/sw02/notes/notes_sw02.tex
@@ -39,10 +39,50 @@ $x[n]$   & \verb!X.XXXXXX!                 & $[-1,+1)$ \\\\
 $X_q[n]$ & \verb!X.XXX   !                 & $[-1,+1)$ \\\\
 \end{tabular}
 
+\clearpage
+
 \section{Runden in Matlab}
-\verb!ceil! $\rightarrow$ $\rightarrow$ \\
-\verb!floor! $\leftarrow$ $\leftarrow$ \\
-\verb!round! $\leftarrow$ $\rightarrow$ \\
-\verb!fix! $\rightarrow$ $\leftarrow$ \\
+\begin{figure}[h!]
+    \begin{minipage}[c]{0.5\textwidth}
+        \begin{tikzpicture}
+            \draw[] (1,-0.5) node[below] {-2} -- (1,3.5);
+            \draw[] (2,-0.5) node[below] {-1} -- (2,3.5);
+            \draw[] (3,-0.5) node[below] { 0} -- (3,3.5);
+            \draw[] (4,-0.5) node[below] { 1} -- (4,3.5);
+            \draw[] (5,-0.5) node[below] { 2} -- (5,3.5);
+            \draw[dashed] (1.5,-0.2) -- (1.5,3.2);
+            \draw[dashed] (2.5,-0.2) -- (2.5,3.2);
+            \draw[dashed] (3.5,-0.2) -- (3.5,3.2);
+            \draw[dashed] (4.5,-0.2) -- (4.5,3.2);
+            \node at (-0.2,3) [right] {\verb!ceil!};
+            \draw[|-latex, blue, thick] (1,3) -- (2,3);
+            \draw[|-latex, blue, thick] (2,3) -- (3,3);
+            \draw[|-latex, blue, thick] (3,3) -- (4,3);
+            \draw[|-latex, blue, thick] (4,3) -- (5,3);
+            \node at (-0.2,2) [right] {\verb!floor!};
+            \draw[|-latex, blue, thick] (2,2) -- (1,2);
+            \draw[|-latex, blue, thick] (3,2) -- (2,2);
+            \draw[|-latex, blue, thick] (4,2) -- (3,2);
+            \draw[|-latex, blue, thick] (5,2) -- (4,2);
+            \node at (-0.2,1) [right] {\verb!round!};
+            \draw[|-latex, blue, thick] (1.5,1) -- (1,1);
+            \draw[|-latex, blue, thick] (1.5,1) -- (2,1);
+            \draw[|-latex, blue, thick] (2.5,1) -- (2,1);
+            \draw[|-latex, blue, thick] (2.5,1) -- (3,1);
+            \draw[|-latex, blue, thick] (3.5,1) -- (3,1);
+            \draw[|-latex, blue, thick] (3.5,1) -- (4,1);
+            \draw[|-latex, blue, thick] (4.5,1) -- (4,1);
+            \draw[|-latex, blue, thick] (4.5,1) -- (5,1);
+            \node at (-0.2,0) [right] {\verb!fix!};
+            \draw[|-latex, blue, thick] (1,0) -- (2,0);
+            \draw[|-latex, blue, thick] (2,0) -- (3,0);
+            \draw[|-latex, blue, thick] (4,0) -- (3,0);
+            \draw[|-latex, blue, thick] (5,0) -- (4,0);
+        \end{tikzpicture}
+    \end{minipage}
+    \begin{minipage}[c]{0.5\textwidth}
+        \includegraphics[width = 1.0\textwidth]{round_matlab.pdf}
+    \end{minipage}
+\end{figure}
 
 \end{document}
