--- a/layout/layout.sty
+++ b/layout/layout.sty
@@ -305,9 +305,9 @@
     \@ifclassloaded{article}{
         \fancyhead[L]{\textbf{ADD}}                % Kopfeile links
         \fancyhead[C]{Hochschule Luzern - Technik \& Architektur}  % zentrierte Kopfzeile
-        \fancyhead[R]{Timm Felix Baumann\\Elia Fankhauser\\Daniel Winz} % Kopfzeile rechts
+        \fancyhead[R]{Daniel Winz} % Kopfzeile rechts
         %
-        \fancyfoot[L]{Datenblatt Floppy-Music}       % Fusszeile links
+        \fancyfoot[L]{Notizen DSVB}       % Fusszeile links
         \fancyfoot[C]{\today}                       % Fusszeile zentriert
         \fancyfoot[R]{\thepage}                     % Fusszeile rechts
         %
