Questions Q1 .. Q4, Answer to Q1 and Q2

--- a/layout/layout.sty
+++ b/layout/layout.sty
@@ -303,7 +303,7 @@
     % Kopf- und Fusszeile für Artikel
     \makeatletter       % @ Teil des Befehls
     \@ifclassloaded{article}{
-        \fancyhead[L]{\textbf{ADD}}                % Kopfeile links
+        \fancyhead[L]{\textbf{DSVB}}                % Kopfeile links
         \fancyhead[C]{Hochschule Luzern - Technik \& Architektur}  % zentrierte Kopfzeile
         \fancyhead[R]{Daniel Winz} % Kopfzeile rechts
         %
