--- a/lab1/attestation/attestation.tex
+++ b/lab1/attestation/attestation.tex
@@ -13,6 +13,31 @@
 \maketitle
 \clearpage
 
+\section{Aufgaben}
+\begin{enumerate}
+    \item Machen Sie sich mit dem DTMF Verfahren vertraut (siehe TI\_DTMF.pdf)
+    \item Analysieren Sie das Projekt \verb?App14_DTMW_ToneGen? und erledigen 
+        Sie \verb?ToDo 1a,b?. Vergleichen Sie anschliessend ihren DTMF 
+        Tongenerator gegen einen 
+        \href{http://www.audiocheck.net/audiocheck_dtmf.php}{anderen Generator}.
+    \item In \verb?App15_DTMF_Detect? vervollständigen Sie \verb?ToDo 2?. 
+        Testen Sie die Funktionalität des DTMF Detektors mit der Filter 
+        Implementierung \verb?v0? und der Leistungsberechnung \verb?v0? mit 
+        einem DTMF Generator (Eingang via Line-In oder Mikrofon). Passen Sie 
+        den Signalpegel an bis der Detektor zuverlässig arbeitet. 
+    \item Siehe \nameref{q1}
+    \item Vervollständigen Sie \verb?Todo 3? und implementieren Sie \verb?v1? 
+        des Filters so, dass die globale Variable \verb?delay[]? nur noch zwei 
+        Elemente benötigt. 
+    \item Siehe \nameref{q2}
+    \item Siehe \nameref{q3}
+    \item Vervollständigen Sie \verb?ToDo 4? und \verb?ToDo 5? und testen Sie 
+        ihre Leistungsberechnung Methode \verb?v1?.
+    \item Siehe \nameref{q4}
+\end{enumerate}
+
+\clearpage
+
 \section{Fragen}
 
 \subsection{Q1}
