--- a/lab1/attestation/attestation.tex
+++ b/lab1/attestation/attestation.tex
@@ -20,19 +20,35 @@
         Sie \verb?ToDo 1a,b?. Vergleichen Sie anschliessend ihren DTMF 
         Tongenerator gegen einen 
         \href{http://www.audiocheck.net/audiocheck_dtmf.php}{anderen Generator}.
+        \lstsettingc
+        \lstinputlisting[linerange={58-71, firstnumber=58}]{../App14_DTMF_ToneGen/Headers/DTMF.h}
+        \lstsettingc
+        \lstinputlisting[linerange={65-70, firstnumber=65}]{../App14_DTMF_ToneGen/Sources/sinewaves.c}
     \item In \verb?App15_DTMF_Detect? vervollständigen Sie \verb?ToDo 2?. 
         Testen Sie die Funktionalität des DTMF Detektors mit der Filter 
         Implementierung \verb?v0? und der Leistungsberechnung \verb?v0? mit 
         einem DTMF Generator (Eingang via Line-In oder Mikrofon). Passen Sie 
         den Signalpegel an bis der Detektor zuverlässig arbeitet. 
+        \lstsettingmatlab
+        \lstinputlisting[linerange={1-16, firstnumber=1}]{../goertzel_coeff.m}
+        \lstsettingc
+        \lstinputlisting[linerange={56-78, firstnumber=56}]{../App15_DTMF_Detect/Headers/goertzel.h}
     \item Siehe \nameref{q1}
     \item Vervollständigen Sie \verb?Todo 3? und implementieren Sie \verb?v1? 
         des Filters so, dass die globale Variable \verb?delay[]? nur noch zwei 
         Elemente benötigt. 
+        \lstsettingc
+        \lstinputlisting[linerange={86-116, firstnumber=86}]{../App15_DTMF_Detect/Sources/goertzel.c}
     \item Siehe \nameref{q2}
     \item Siehe \nameref{q3}
     \item Vervollständigen Sie \verb?ToDo 4? und \verb?ToDo 5? und testen Sie 
         ihre Leistungsberechnung Methode \verb?v1?.
+        \lstsettingmatlab
+        \lstinputlisting[linerange={18-31, firstnumber=18}]{../goertzel_coeff.m}
+        \lstsettingc
+        \lstinputlisting[linerange={79-99, firstnumber=79}]{../App15_DTMF_Detect/Headers/goertzel.h}
+        \lstsettingc
+        \lstinputlisting[linerange={167-204, firstnumber=167}]{../App15_DTMF_Detect/Sources/goertzel.c}
     \item Siehe \nameref{q4}
 \end{enumerate}
 
