--- a/lab1/attestation/attestation.tex
+++ b/lab1/attestation/attestation.tex
@@ -187,5 +187,6 @@ Diese Formel ist im Goerzel v0 implementiert.
 \emph{bezüglich Rechenaufwand und numerischer Robustheit. Welche Version 
 würden Sie bevorzugen?}
 \paragraph{Lösung: }
+Da in Version 0  weniger multipliziert und geschoben wird als in Version 1, ist Version 0 schneller und robuster.
 
 \end{document}
